# kwin

./: CMakeLists.txt  abstract_client.cpp  abstract_client.h  abstract_output.h  abstract_wayland_output.cpp  abstract_wayland_output.h  activation.cpp  composite.cpp  composite.h  config-kwin.h.cmake  cursor.cpp  dbusinterface.cpp  dbusinterface.h  deleted.cpp  deleted.h  effects.cpp  effects.h  gestures.cpp  gestures.h  globalgesture.cpp  globalgesture.h  globalgestureforwarder.cpp  globalgestureforwarder.h  globalgesturetypes.h  globalmotions.cpp  globalmotions.h  globalpinchgestures.cpp  globalpinchgestures.h  globalshortcuts.cpp  globalshortcuts.h  globalswipegestures.cpp  globalswipegestures.h  input.cpp  input.h  inputmethod.cpp  inputmethod.h  inputpanelv1client.cpp  inputpanelv1client.h  internal_client.cpp  internal_client.h  (+54 more)
debian/: changelog  control  kwin-common.install  kwin-common.maintscript  kwin-data.install  kwin-dev.install  kwin-wayland-backend-hwcomposer.install  kwin-wayland-backend-surfaceflinger.install  kwin-wayland.install  kwin-wayland.postinst  kwin-x11.install  libkwinglutils13.install  setcap.yaml
decorations/: decoratedclient.cpp  decorationbridge.cpp
effects/: CMakeLists.txt  effect_builtins.cpp  effect_builtins.h
effects/switchwindows/: CMakeLists.txt  switchwindows.cpp  switchwindows.h  switchwindows.kcfg  switchwindows_config.cpp  switchwindows_config.desktop  switchwindows_config.h  switchwindows_config.ui  switchwindowsconfig.kcfgc
libinput/: connection.cpp  connection.h  context.cpp  device.cpp  device.h
tabbox/: tabbox.cpp
(+826 files in other folders)
